# pilot

./: README.md  config.sh  pyproject.toml  requirements.txt
ci/publish/: main.sh
pilot/: __main__.py
pilot/data/: content.py  context.py  control.py  figures.py  manager.py
pilot/formatter/: base.py  penguin.py
pilot/io/: base.py  cli.py  console.py
pilot/role/: base.py  chat.py  exit_tool.py  factory.py  registry.py  user.py
pilot/tools/: base.py
