[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot-code"
version = "0.1.0"
description = "Coding harness for multi-agent execution and orchestration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
  { name = "AttAditya" }
]

keywords = ["coding-harness", "agents", "automation", "orchestration"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/AttAditya/pilot"
Repository = "https://github.com/AttAditya/pilot"
Issues = "https://github.com/AttAditya/pilot/issues"

[project.scripts]
pilot = "pilot.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pilot*"]

